# librarian

./: .env.example  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  comment_postgres.sh  docker-compose.dist.yml  docker-compose.prod.yml  docker-compose.yml  install-supabase.sh  package-lock.json  package.json  pnpm-lock.yaml
backend/: .dockerignore  Cargo.toml  Dockerfile
backend/"/data/session"/: dht.json
backend/data/: librarian.db  librarian.db-shm
backend/data/session/: dht.json
backend/migrations/: 001_initial_schema.sql  002_update_downloads_for_librqbit.sql  003_app_settings.sql  004_tv_library_schema.sql  005_disable_rls_for_backend.sql  006_episode_available_status.sql  007_auto_download_settings.sql  008_organize_settings.sql  009_logs.sql  010_auto_hunt.sql  011_library_scanning_state.sql  012_inline_quality_settings.sql  013_indexer_configs.sql  014_cast_devices.sql  015_cleanup_legacy_tables.sql  016_organize_enhancements.sql  017_naming_patterns.sql  018_movies.sql  019_music.sql  020_audiobooks.sql  021_naming_patterns_by_type.sql  022_torrent_media_links.sql  023_watch_progress.sql  024_unified_playback.sql  025_drop_audiobook_progress.sql  026_remove_quality_profiles.sql  027_fix_watch_progress_episode_index.sql  028_file_level_matching.sql  029_rename_audiobook_tables.sql  030_llm_parser_settings.sql  031_llm_library_type_models.sql  032_media_chapters.sql  033_drop_legacy_torrent_linking.sql  034_usenet_and_priorities.sql  035_pending_file_matches.sql  036_verification_status.sql  037_media_file_metadata.sql  038_album_art_lyrics.sql  039_notifications.sql  040_torrent_files.sql  (+2 more)
backend/migrations_sqlite/: 001_initial_schema.sql  002_add_torrents_created_at.sql  002_fingerprinting_and_extended_metadata.sql  003_auth_secrets.sql  003_seed_naming_patterns.sql  004_cast_setting_default_volume_real.sql  004_seed_app_settings.sql  005_add_missing_columns.sql  006_add_source_priority_rules.sql  007_add_torrent_source_columns.sql  008_fix_usenet_downloads_schema.sql  009_fix_torrent_files_schema.sql  010_fix_torrent_post_process_constraint.sql  011_add_media_file_video_metadata.sql  012_fix_movies_tmdb_rating_type.sql  013_add_media_files_album_art.sql  014_add_torrents_created_at.sql  015_fix_artwork_cache_constraint.sql  016_unified_watch_progress.sql
backend/src/: app.rs  app_mode.rs  cli.rs  main.rs  static_assets.rs
backend/src/api/: artwork.rs  filesystem.rs  health.rs  libraries.rs  me.rs  media.rs  mod.rs  subscriptions.rs  torrents.rs  torznab.rs
backend/src/config/: mod.rs
backend/src/db/: albums.rs  artwork.rs  audiobooks.rs  cast.rs  episodes.rs  indexers.rs  libraries.rs  logs.rs  media_files.rs  mod.rs  movies.rs  naming_patterns.rs  notifications.rs  operations.rs  pending_file_matches.rs  playback.rs  priority_rules.rs  quality_profiles.rs  rss_feeds.rs  schedule.rs  schema_sync.rs  seed.rs  settings.rs  sqlite_helpers.rs  subtitles.rs  torrent_file_matches.rs  torrent_files.rs  torrents.rs  tracks.rs  tv_shows.rs  usenet_downloads.rs  usenet_servers.rs  users.rs  watch_progress.rs
backend/src/db/operations/: app_log.rs  mod.rs  refresh_tokens.rs  user_auth.rs  user_library_access.rs
backend/src/graphql/: auth.rs  filters.rs  helpers.rs  mod.rs  pagination.rs  schema.rs  subscriptions.rs  types.rs
backend/src/graphql/mutations/: audiobooks.rs  auth.rs  filesystem.rs  indexers.rs  libraries.rs  logs.rs  media_files.rs  mod.rs  movies.rs  music.rs  notifications.rs  playback.rs  priority_rules.rs  rss_feeds.rs  settings.rs  torrents.rs  tv_shows.rs  usenet.rs  user.rs
backend/src/graphql/queries/: audiobooks.rs  episodes.rs  filesystem.rs  indexers.rs  libraries.rs  logs.rs  media.rs  media_files.rs  mod.rs  movies.rs  music.rs  notifications.rs  playback.rs  priority_rules.rs  rss_feeds.rs  settings.rs  system.rs  torrents.rs  tv_shows.rs  upcoming.rs  usenet.rs  user.rs
backend/src/indexer/: categories.rs  encryption.rs  manager.rs  mod.rs  types.rs
backend/src/indexer/definitions/: cardigann.rs  iptorrents.rs  mod.rs
backend/src/indexer/torznab/: mod.rs  request.rs
backend/src/jobs/: artwork.rs  auto_download.rs  auto_hunt.rs  content_progress.rs  download_monitor.rs  mod.rs  rss_poller.rs  scanner.rs  schedule_sync.rs  transcode_gc.rs
backend/src/media/: metadata.rs  mod.rs  organizer.rs  transcoder.rs
backend/src/platform/: mod.rs  windows.rs
backend/src/services/: artwork.rs  audible.rs  auth.rs  cache.rs  cast.rs  database.rs  download_source.rs  extractor.rs  ffmpeg.rs  file_matcher.rs  file_processor.rs  file_utils.rs  filename_parser.rs  filesystem.rs  fingerprint.rs  http_server.rs  hunt.rs  job_queue.rs  logging.rs  manager.rs  match_scorer.rs  media_processor.rs  metadata.rs  metrics.rs  mod.rs  musicbrainz.rs  notifications.rs  ollama.rs  opensubtitles.rs  organizer.rs  prowlarr.rs  quality_evaluator.rs  queues.rs  rate_limiter.rs  rss.rs  scanner.rs  supabase_storage.rs  text_utils.rs  tmdb.rs  torrent.rs  (+7 more)
backend/src/services/graphql/: auth.rs  auth_mutations.rs  filters.rs  helpers.rs  loaders.rs  mod.rs  pagination.rs  schema.rs  service.rs  subscriptions.rs
backend/src/services/graphql/entities/: album.rs  app_log.rs  app_setting.rs  artist.rs  artwork_cache.rs  audio_stream.rs  audiobook.rs  chapter.rs  (+34 more)
backend/src/services/legacy/: artwork.rs  cache.rs  cast.rs  ffmpeg.rs  file_matcher.rs  file_processor.rs  file_utils.rs  filename_parser.rs  filesystem.rs  hunt.rs  job_queue.rs  metrics.rs  notifications.rs  opensubtitles.rs  organizer.rs  quality_evaluator.rs  queues.rs  rss.rs  scanner.rs  torrent.rs  track_matcher.rs  usenet.rs
backend/src/services/metadata/: mod.rs  tmdb.rs  tvmaze.rs
backend/src/services/torrent/: client.rs  database.rs  db_helpers.rs  mod.rs  service.rs
backend/src/torrent/: mod.rs  quality.rs
backend/src/tui/: app.rs  input.rs  layer.rs  mod.rs  theme.rs  ui.rs
backend/src/tui/panels/: database.rs  libraries.rs  logs.rs  mod.rs  system.rs  torrents.rs  users.rs
backend/src/usenet/: mod.rs  nntp.rs  yenc.rs
backend/tests/: media_pipeline_tests.rs
(+231 files in other folders)
