[package]
name = "librarian-backend"
version = "0.1.0"
edition = "2024"
authors = ["Librarian Contributors"]
description = "Rust backend for Librarian media library"

[dependencies]
# Web framework
axum = { version = "0.8", features = ["macros", "ws", "multipart"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "fs"] }

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"

# GraphQL with subscriptions
async-graphql = { version = "7", features = ["uuid", "time", "tracing"] }
async-graphql-axum = "7"
futures = "0.3"

# Native torrent client
librqbit = "8"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "time", "json", "chrono", "rust_decimal"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "2"
anyhow = "1"

# JWT/Auth
jsonwebtoken = "9"

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls", "cookies"], default-features = false }

# Job scheduling
tokio-cron-scheduler = "0.13"

# File watching
notify = "8"
walkdir = "2"

# Utilities
regex = "1"
sanitize-filename = "0.6"
uuid = { version = "1", features = ["v4", "serde"] }
time = { version = "0.3", features = ["serde", "formatting", "parsing"] }
once_cell = "1"
parking_lot = "0.12"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

# Config
dotenvy = "0.15"
dirs = "6.0.0"
chrono = { version = "0.4.42", features = ["serde"] }
sha2 = "0.10.9"
rust_decimal = { version = "1.39.0", features = ["serde"] }

[dev-dependencies]
tokio-test = "0.4"
