[package]
name = "librarian"
version = "0.1.0"
edition = "2024"
authors = ["toby@dastari.net"]
description = "Rust backend for Librarian media library"

[features]
default = ["sqlite"]
postgres = ["sqlx/postgres"]
sqlite = ["sqlx/sqlite"]

[dependencies]
# Web framework
axum = { version = "0.8", features = ["macros", "ws", "multipart"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "fs", "compression-gzip"] }

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["io"] }

# GraphQL with subscriptions
async-graphql = { version = "7", features = ["uuid", "time", "tracing"] }
async-graphql-axum = "7"
futures = "0.3"

# Native torrent client
librqbit = "8"

# Database - features controlled by crate features above
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "uuid", "time", "json", "chrono", "rust_decimal"] }

# Password hashing
bcrypt = "0.16"

# File type detection (for artwork)
infer = "0.19"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "2"
anyhow = "1"

# JWT/Auth
jsonwebtoken = "9"

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls", "cookies", "gzip", "deflate"], default-features = false }

# Job scheduling
tokio-cron-scheduler = "0.13"

# File walking
walkdir = "2"

# Internal macros
librarian-macros = { path = "../librarian-macros" }

# Utilities
regex = "1"
sanitize-filename = "0.6"
uuid = { version = "1", features = ["v4", "serde"] }
time = { version = "0.3", features = ["serde", "formatting", "parsing"] }
once_cell = "1"
parking_lot = "0.12"
url = "2"

# Fuzzy string matching
rapidfuzz = "0.5"

# Rate limiting and retry logic
governor = "0.6"
backoff = { version = "0.4", features = ["tokio"] }

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

# TUI dashboard
ratatui = "0.29"
crossterm = "0.28"

# System metrics
sysinfo = "0.32"

# Config
dotenvy = "0.15"
dirs = "6.0.0"
mime_guess = "2.0"
chrono = { version = "0.4.42", features = ["serde"] }
sha2 = "0.10.9"
rust_decimal = { version = "1.39.0", features = ["serde"] }

# XML parsing for RSS feeds and Torznab responses
quick-xml = "0.37"

# HTML parsing for indexer scraping
scraper = "0.22"

# YAML parsing for Cardigann indexer definitions
serde_yaml = "0.9"

# Credential encryption
aes-gcm = "0.10"
base64 = "0.22"
rand = "0.8"

# Chromecast/Google Cast support
rust_cast = "0.21"

# mDNS device discovery
mdns-sd = "0.11"
flume = "0.11"

# UPnP port forwarding
igd = "0.12"
lofty = "0.22.4"
serde_bencode = "0.2.4"
native-tls = "0.2.14"
md5 = "0.8.0"
urlencoding = "2.1.3"
crc32fast = "1.5.0"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
assert_matches = "1"
pretty_assertions = "1"
# regex is already a main dependency, but we use it in tests too

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'
strip = true
